// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en 1`] = `
<Layout
  lang="en"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="en"
    meta={Array []}
    title="Blog | Smart Contract Programmer"
  />
  <PostsByYear
    posts={
      Array [
        Object {
          "component": [Function],
          "date": "2019-04-11",
          "lang": "en",
          "title": "Solidity by Example - Part 0 - Setting Up MetaMask",
        },
      ]
    }
  />
</Layout>
`;

exports[`jp 1`] = `
<Layout
  lang="jp"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="jp"
    meta={Array []}
    title="ブログ | Smart Contract Programmer"
  />
  <PostsByYear
    posts={
      Array [
        Object {
          "component": [Function],
          "date": "2019-04-11",
          "lang": "jp",
          "title": "Solidity 入門 - パート 0 - MetaMaskの設定",
        },
      ]
    }
  />
</Layout>
`;
